--- a/index_pl.html
+++ b/index_pl.html
@@ -1071,17 +1071,17 @@
   <div id="kunena">
     <h3>Kunena Forum</h3>
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena Forum jest komponent dla Joomla. To pozwala na wdrożenie w pełni funkcjonalnego forum w oparciu o CMS Joomla.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <p class="muted text-center">Obraz 21. Kunena forum</p></div>
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Komponent Kunena można uzyskać za pośrednictwem panelu administracyjnego Joomla pod <b>Komponenty -> Kunena</b> menu.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <p class="muted text-center">Obraz 22. Sekcja komponent Kunena</p></div>
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
+    <p>Możesz dowiedzieć się więcej na temat użytkowania i konfiguracji komponentu Kunena w <a href="http://www.kunena.org/docs/Main_Page" target="_blank">oficjalnej stronie</a>.</p>
   </div>
 
 </section>
