--- a/index_de.html
+++ b/index_de.html
@@ -1061,20 +1061,20 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <p>Mit Hilfe von Konfigurationseinstellungen können Sie Kommentare für bestimmte Kategorien aktivieren, Captcha und Nutzerprofils hinzufügen usw. Mehr können Sie <a href="http://stackideas.com/docs/komento.html" target="_blank">in der offizielle Website</a> erfahren</p>
   </div>
 
-  <div id="kunena">
-    <h3>Kunena Forum</h3>
+  <div id="kunena"> 
+    <h3>Forum Kunena</h3> 
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena ist eine Komponente des Forums zur Joomla. Sie ermoglicht vollig funktionelles Forum zu realisieren, das auf Joomla! CMS gegrundet wurde.</p> 
 
-    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild. 21. Forum Kunena</p></div> 
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Komponente Kunena ist erreichbar aus dem Control Panel von Joomla im Menu <b>Components -> Kunena</b>.</p> 
 
-    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild. 22. Die Sektion der Komponente Kunena</p></div> 
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
+    <p>Sie konnen mehr uber Verwendung und Einstellung der Komponente Kunena auf <a href="http://www.kunena.org/docs/Main_Page" target="_blank">der offiziellen Webseite erfahren</a>.</p> 
   </div>
 
 </section>
