--- a/index_en.html
+++ b/index_en.html
@@ -1068,17 +1068,17 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
   <div id="kunena">
     <h3>Kunena Forum</h3>
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena is a forum component for Joomla. It allows you to implement a fully functional forum based on the Joomla CMS.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <p class="muted text-center">Img 21. Kunena forum</p></div>
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Kunena component can be accessed through the Joomla administration panel under the <b>Components -> Kunena</b> menu.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <p class="muted text-center">Img 22. Kunena component section</p></div>
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
+    <p>You can learn more about Kunena component usage and configuration at the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website</a>.</p>
   </div>
 
 </section>
