--- a/index_fr.html
+++ b/index_fr.html
@@ -1068,19 +1068,19 @@
   </div>
 
   <div id="kunena">
-    <h3>Kunena Forum</h3>
+    <h3>Forum Kunena</h3>
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena est un composant de forum pour Joomla. Il vous permet de mettre en œuvre un forum entièrement fonctionnel basé sur le CMS Joomla.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <p class="muted text-center">L'image 21. Forum Kunena</p></div>
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Composant Kunena peut être accessible via le panneau d'administration Joomla sous les <b>Composants -> Kunena</b> menu.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <p class="muted text-center">L'image 22. Section de composant Kunena</p></div>
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
+    <p>Vous pouvez en apprendre plus sur Kunena utilisation de composants et de configuration à la <a href="http://www.kunena.org/docs/Main_Page" target="_blank">site officiel</a>.</p>
   </div>
 
 </section>
