--- a/index_it.html
+++ b/index_it.html
@@ -1067,20 +1067,20 @@
   </div>
 
   <div id="kunena">
-    <h3>Kunena Forum</h3>
+    <h3>Forum Kunena</h3>
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena è un componente forum per Joomla. Esso consente di implementare un forum completamente funzionale basato sul CMS Joomla.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <p class="muted text-center">Immagine 21. Forum Kunena</p></div>
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Kunena componente si può accedere attraverso il pannello di amministrazione di Joomla sotto il menu <b>Componenti -> Kunena</b>.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <p class="muted text-center">Immagine 22. Sezione componente Kunena</p></div>
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
-  </div>
+    <p>Potete saperne di più sull'uso componente Kunena e la configurazione sul <a href="http://www.kunena.org/docs/Main_Page" target="_blank">sito ufficiale</a>.</p>
+</div>
 
 </section>
 
