--- a/index_ru.html
+++ b/index_ru.html
@@ -1066,19 +1066,19 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
   </div>
 
   <div id="kunena">
-    <h3>Kunena Forum</h3>
+    <h3>Форум Kunena</h3>
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena - компонент форума для Joomla. Он позволяет реализовать полностью функциональный форум, основанный на Joomla! CMS.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <p class="muted text-center">Рис. 21. Форум Kunena</p></div>
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Компонент Kunena доступен из панели управления  Joomla в меню <b>Components -> Kunena</b>.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <p class="muted text-center">Рис. 22. Секция компонента Kunena</p></div>
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
+    <p>Вы можете узнать больше об использовании и настройке компонента Kunena на <a href="http://www.kunena.org/docs/Main_Page" target="_blank">официальном вебсайте</a>.</p>
   </div>
 
 </section>
