--- a/index_tr.html
+++ b/index_tr.html
@@ -1071,17 +1071,17 @@
   <div id="kunena">
     <h3>Kunena Forum</h3>
 
-    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+    <p>Kunena Joomla için bir forum bileşenidir. Bu Joomla CMS dayalı tamamen işlevsel bir forum uygulamasına olanak tanır.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
-        <p class="muted text-center">Img 21. Kunena forum</p></div>
+    <p class="muted text-center">Görüntü 21. Kunena forum</p></div>
 
-    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+    <p>Kunena bileşeni <b>Bileşenler -> Kunena</b> menüsü altında Joomla yönetim paneli üzerinden ulaşılabilir.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
-        <p class="muted text-center">Img 22. Kunena component section</p></div>
+    <p class="muted text-center">Görüntü 22. Kunena bileşeni bölüm</p></div>
 
-    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
+    <p>Sen resmi <a href="http://www.kunena.org/docs/Main_Page" target="_blank">web sitesinde</a> Kunena bileşeni kullanımı ve yapılandırması hakkında daha fazla bilgi edinebilirsiniz.</p>
   </div>
 
 </section>
